[package]
name = "onxpoint"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
axum = { version = "0.7.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
anyhow = "1.0.86"
reqwest = {  version = "0.12.5", features = ["json"] }
redis = "0.25.4"
bb8 = "0.8.5"
bb8-redis = "0.15.0"
